@@ -19,4 +19,4 @@ THEME CREDITS
 -------------
 Default background image (Aurora Borealis stock) by Smattila on DeviantArt
 	Shared under CC BY
-	Downloaded from http://smattila.deviantart.com/art/Aurora-Borealis-stock-82049584?moodonly=123#skins
+	Downloaded from http://smattila.deviantart.com/art/Aurora-Borealis-stock-82049584?moodonly=123#skins 
